...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.neighbour_details.DetailsActivity"
    android:id="@+id/details_activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
...
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_star_border_white_24dp"
        android:tint="#FFCA29"
        android:backgroundTint="#F5F5F5"
        app:layout_anchor="@id/details_collapsingToolbar"
        app:layout_anchorGravity="bottom|right|end"
        android:id="@+id/fab" />

</android.support.design.widget.CoordinatorLayout>
