...
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="5dp"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:id="@+id/details_name"
            android:background="@drawable/border_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
...
